--- a/news.html
+++ b/news.html
@@ -107,7 +107,7 @@
             </section>
         </div>
     </footer>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             document.getElementById("menubotn").addEventListener("click", function () {
