--- a/q&a.html
+++ b/q&a.html
@@ -18,26 +18,26 @@
     <!-- 見出しのメニュー -->
     <!-- 見出しのメニュー -->
     <header>
-            <div class="flx">
-                <div class="logo">
-                    <p>HTML<br>CSS</p>
-                    <!-- ハンバーガーメニュー -->
-                    <a class="menubotn" id="menubotn">
-                        <div class=""></div>
-                        <div class=""></div>
-                        <div class=""></div>
-                    </a>
-                    <!-- ハンバーガーメニュー -->
-                </div>
-                <nav id="nav">
-                    <ul class="menue">
-                        <li class="list1"><a href="index.html">About</a></li>
-                        <li class="list2"><a href="news.html">News</a></li>
-                        <li class="list3"><a href="q&a.html">Q&A</a></li>
-                    </ul>
-                </nav>
+        <div class="flx">
+            <div class="logo">
+                <p>HTML<br>CSS</p>
+                <!-- ハンバーガーメニュー -->
+                <a class="menubotn" id="menubotn">
+                    <div class=""></div>
+                    <div class=""></div>
+                    <div class=""></div>
+                </a>
+                <!-- ハンバーガーメニュー -->
             </div>
-        </header>
+            <nav id="nav">
+                <ul class="menue">
+                    <li class="list1"><a href="index.html">About</a></li>
+                    <li class="list2"><a href="news.html">News</a></li>
+                    <li class="list3"><a href="q&a.html">Q&A</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <!-- バックに画像があるやつ -->
     <div class="bgmnzi">
         <div class="nwlife">
@@ -52,68 +52,86 @@
         <section class="flxi">
             <dl id="acMenu">
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
 
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
                 <div class="info">
-                    <dt class="qa">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
+                    <dt class="qa">
+                        家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
                     <dd class="answer">可能です。<br>取り置き期間は最大で3週間です。</dd>
                 </div>
             </dl>
         </section>
     </div>
-   <!-- Q&Aレスポンシブver -->
+    <!-- Q&Aレスポンシブver -->
     <div class="news_res">
-            <section class="heading_res">
-                <h2>よくある質問</h2>
-            </section>
-            <section class="flxi_res">
-                <dl id="acMenu_res">
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-    
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-                    <div class="info_res">
-                        <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-down"></i></dt>
-                        <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
-                    </div>
-                </dl>
-            </section>
-        </div>
+        <section class="heading_res">
+            <h2>よくある質問</h2>
+        </section>
+        <section class="flxi_res">
+            <dl id="acMenu_res">
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+                <div class="info_res">
+                    <dt class="qa_res">家具の取り置きは可能でしょうか&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa fa-angle-down"></i></dt>
+                    <dd class="answer_res">可能です。<br>取り置き期間は最大で3週間です。</dd>
+                </div>
+            </dl>
+        </section>
+    </div>
     <!-- フッター -->
     <footer>
         <div class="wrap">
@@ -136,7 +154,7 @@
             </section>
         </div>
     </footer>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(function () {
             $('#acMenu dt').click(function () {
